--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,6 @@
     "jquery-ui": "~1.11.4",
     "blueimp-file-upload": "jquery-file-upload#~9.11.2",
     "bootstrap": "~3.3.5",
-    "angular": "~1.4.7",
-    "ng-file-upload": "~9.1.2"
+    "angular": "~1.4.7"
   }
 }
